fix not user_id: order, waste and sale